<resources>
    <string name="app_name">Marketplace App</string>
    <string name="home">Home</string>
    <string name="catalog">Catalog</string>
    <string name="cart">Cart</string>
    <string name="user">User</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="product_image">Product image</string>
    <string name="increase_cart_item_amount">Increase amount</string>
    <string name="decrease_cart_item_amount">Decrease amount</string>
    <string name="price_placeholder">$%1$d</string>
    <string name="in_stock_placeholder">In stock: %1$d</string>
    <string name="sales_placeholder">%1$d sales</string>
    <string name="top_sales">Top sales</string>
    <string name="top_rated">Top rated</string>
    <string name="you_viewed">You viewed</string>
    <string name="explore">Explore</string>
    <string name="delete_selected_items">Delete selected</string>
    <string name="select_all_items">Select all</string>
    <string name="checkout">Checkout</string>
    <string name="purchase">Purchase</string>
    <string name="type">Type</string>
    <string name="color">Color</string>
    <string name="material">Material</string>
    <string name="description">Description</string>
    <string name="about">About</string>
    <string name="reviews">Reviews</string>
    <string name="similar_products">Similar Products</string>
    <string name="show_all_reviews">Show all reviews</string>
    <string name="hide_all_reviews">Hide all reviews</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="all_reviews">All reviews</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="special_offer">Special offer</string>
    <string name="products_of_the_day">Products of the day</string>
    <string name="percent_off_placeholder">-%1$d%%</string>
    <string name="featured">Featured</string>
    <string name="home_screen_footer">That\'s it! 🙃\nVisit our catalog\nfor more cool offers</string>
    <string name="special_offer_banner">Special offer banner</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_in_for_full_experience">Sign in for full experience</string>
    <string name="sign_in">Sign in</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="wrong_password">Wrong password</string>
    <string name="or">OR</string>
    <string name="i_m_new_user">I\'m new user,\u0020</string>
    <string name="sign_up">Sign up</string>
    <string name="products_amount_placeholder">Selected: %1$d</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="full_name">Full name</string>
    <string name="sign_up_to_get_started">Sign up to get started</string>
    <string name="create_account">Create Account</string>
    <string name="invalid_email">Invalid email</string>
    <string name="password_is_too_short">Password must be at least 8 symbols long</string>
    <string name="wrong_email_format">Wrong email format</string>
    <string name="google_signin_error">Something went wrong with logging into your Google account. Please sign in with your email and password or try again later</string>
    <string name="ok">OK</string>
    <string name="visa_card">visa_card</string>
    <string name="mir_card">mir_card</string>
    <string name="mastercard">mastercard</string>
    <string name="maestro_card">maestro_card</string>
    <string name="card_holder">CARD HOLDER</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvc_cvv">CVC/CVV</string>
    <string name="order_summary">Order Summary</string>
    <string name="place_order">Place Order</string>
    <string name="total">Total</string>
    <string name="amount_placeholder">%1$dx</string>
    <string name="name_empty">Please, enter your full name</string>
    <string name="user_not_found">User not found</string>
    <string name="play_services_unavailable">Play services are unavailable on this device.</string>
    <string name="password_is_blank">Password is blank</string>
    <string name="missing_uppercase_letter">Password must contain an uppercase letter</string>
    <string name="missing_number">Password must contain a number</string>
    <string name="missing_lowercase_letter">Password must contain a lowercase letter</string>
    <string name="invalid_card_number">Invalid card number</string>
    <string name="invalid_expire_date">Invalid expire date</string>
    <string name="invalid_cvv">Please enter full CVV</string>
    <string name="please_wait">Checkout in progress, please wait</string>
    <string name="payment_successful">Payment successful</string>
    <string name="payment_failed">Payment failed</string>
    <string name="order_is_paid_successfully">Order #%1$d is paid successfully</string>
    <string name="orders">Orders</string>
    <string name="checkout_channel_name">Checkout status</string>
    <string name="people_are_buying">People are buying</string>
</resources>
