<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        style="@style/toolbar_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/cart_top_app_bar"
            style="@style/MyToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="1dp"
            app:title="@string/cart"
            app:titleCentered="false" />

    </com.google.android.material.appbar.AppBarLayout>


    <Button
        android:id="@+id/cartDeleteSelectedButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/delete_selected_items"
        android:textAllCaps="false"
        android:textAppearance="@style/toolbar_style"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:icon="@drawable/ic_close"
        app:iconSize="18dp"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/cartItemDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <CheckBox
        android:id="@+id/cartListItemCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:layout_marginHorizontal="13dp"
        android:layoutDirection="rtl"
        android:text="@string/select_all_items"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/cartItemDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/cartItemDivider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:dividerColor="@color/divider_color"
        app:layout_constraintBottom_toTopOf="@+id/cartRView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartRView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/checkout_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartDeleteSelectedButton"
        tools:listitem="@layout/list_item_cart" />

    <RelativeLayout
        android:id="@+id/checkout_panel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/cartItemsAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/black"
            android:textSize="12sp"
            tools:ignore="RelativeOverlap"
            tools:text="products: 1 " />

        <TextView
            android:id="@+id/cartItemsPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cartItemsAmount"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:text="2498$" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cartCheckoutButton"
            android:layout_width="@dimen/checkout_button_width"
            android:layout_height="@dimen/checkout_button_height"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="6dp"
            android:background="@drawable/button_gradient_background"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/checkout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>